# llamaindex-rag-project

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
docs/: api.md  index.html  installation.html  installation.md  usage.html  usage.md
docs/api/: index.html
examples/: basic_usage.py
llamaindex_rag_project/: __init__.py  client.py
src/llamaindex_rag/: __init__.py  cli.py  config.py  core.py  utils.py  webapp.py
tests/: test_client.py  test_core.py
